--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>LandingPageAdvanced</title>
 
@@ -9,27 +10,108 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/resources/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 
 <body>
     <header class="header">
         <div class="header__logo-box">
-            <img class="header__logo" src="/resources/img/logo.png" alt="logo">
+            <img class="header__logo" src="/img/logo.png" alt="logo">
         </div>
-       <div class="header__text-box">
-        <h3 class="heading-primary">
-            <span class="heading-primary--main">LandingPage Advanced</span>
-            <span class="heading-primary--sub">Design by Van Le</span>
-        </h3>
-        <a href="#" class="bottom bottom--white bottom--animated">More information</a>
-       </div>
-     
-   
+        <div class="header__text-box">
+            <h3 class="heading-primary">
+                <span class="heading-primary--main">LandingPage Advanced</span>
+                <span class="heading-primary--sub">Design by Van Le</span>
+            </h3>
+            <a href="#" class="button button--white button--animated">More information</a>
+        </div>
     </header>
+
+    <div class="about-section">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Story about me
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <h3 class="heading-summary u-margin-bottom-small">
+                    Introduction
+                </h3>
+                <p class="paragraph">
+                    Summary: I am a 4th year student at HCMUS-VNU majoring in Computer Networking.
+                    I have a passion and interest in Web development (front-end),
+                    the goal of creating valuable products.
+                    <br>Career objective: Looking forward to working in a young, energetic and active environment.
+                    Become a Senior front-end developer in the next 2 years.
+                    Turn into a fullstack developer within 5 years later.
+                </p>
+                <h3 class="heading-summary u-margin-bottom-small">
+                    My skills
+                </h3>
+                <p class="paragraph">
+                    html css sass javascript reactjs nodejs
+                </p>
+                <a href="#" class="button-text">More information &rarr;</a>
+            </div>
+            <div class="col-1-of-2">
+                <div class="composition">
+                    <img src="img/minipic1.jpg" alt="photo1" class="composition__photo composition__photo--p1">
+                    <img src="img/minipic2.jpg" alt="photo2" class="composition__photo composition__photo--p2">
+                    <img src="img/minipic3.jpg" alt="photo3" class="composition__photo composition__photo--p3">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="section-skills">
+        <div class="row">
+            <div class="col-1-of-4">
+                <div class="skill-box">
+                    <i class=" skill-box__icon fas fa-globe-americas"></i>
+                    <h3 class="heading-summary u-margin-bottom-small">global skill</h3>
+                    <div class="skill-box__text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
+                        doloribus corporis debitis soluta atque.
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="skill-box">
+                    <i class=" skill-box__icon fas fa-book-open"></i>
+                    <h3 class="heading-summary u-margin-bottom-small">google's knowledge</h3>
+                    <div class="skill-box__text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
+                        doloribus corporis debitis soluta atque.
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="skill-box">
+                    <i class=" skill-box__icon fas fa-users"></i>
+                    <h3 class="heading-summary u-margin-bottom-small">leader of your life</h3>
+                    <div class="skill-box__text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
+                        doloribus corporis debitis soluta atque.
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="skill-box">
+                    <i class=" skill-box__icon fas fa-hourglass-half"></i>
+                    <h3 class="heading-summary u-margin-bottom-small">saving your time</h3>
+                    <div class="skill-box__text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
+                        doloribus corporis debitis soluta atque.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
