--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
     </header>
 
-    <div class="about-section">
+    <div class="section-about">
         <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
-                Story about me
+                About me
             </h2>
         </div>
         <div class="row">
@@ -50,10 +50,11 @@
                     Turn into a fullstack developer within 5 years later.
                 </p>
                 <h3 class="heading-summary u-margin-bottom-small">
-                    My skills
+                    My hobbies
                 </h3>
                 <p class="paragraph">
-                    html css sass javascript reactjs nodejs
+                    Sherlock Holmes, BIGBANG, Lionel Messi
+                    <br>League of Legends, PES, travel
                 </p>
                 <a href="#" class="button-text">More information &rarr;</a>
             </div>
@@ -67,12 +68,12 @@
         </div>
     </div>
 
-    <section class="section-skills">
+    <section class="section-socials">
         <div class="row">
             <div class="col-1-of-4">
                 <div class="skill-box">
-                    <i class=" skill-box__icon fas fa-globe-americas"></i>
-                    <h3 class="heading-summary u-margin-bottom-small">global skill</h3>
+                    <i class=" skill-box__icon fab fa-facebook-square"></i>
+                    <h3 class="heading-summary u-margin-bottom-small">My Facebook</h3>
                     <div class="skill-box__text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
                         doloribus corporis debitis soluta atque.
@@ -81,8 +82,8 @@
             </div>
             <div class="col-1-of-4">
                 <div class="skill-box">
-                    <i class=" skill-box__icon fas fa-book-open"></i>
-                    <h3 class="heading-summary u-margin-bottom-small">google's knowledge</h3>
+                    <i class=" skill-box__icon fab fa-instagram-square"></i>
+                    <h3 class="heading-summary u-margin-bottom-small">My Instagram</h3>
                     <div class="skill-box__text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
                         doloribus corporis debitis soluta atque.
@@ -91,8 +92,8 @@
             </div>
             <div class="col-1-of-4">
                 <div class="skill-box">
-                    <i class=" skill-box__icon fas fa-users"></i>
-                    <h3 class="heading-summary u-margin-bottom-small">leader of your life</h3>
+                    <i class=" skill-box__icon fab fa-github-square"></i>
+                    <h3 class="heading-summary u-margin-bottom-small">My Github</h3>
                     <div class="skill-box__text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
                         doloribus corporis debitis soluta atque.
@@ -101,14 +102,130 @@
             </div>
             <div class="col-1-of-4">
                 <div class="skill-box">
-                    <i class=" skill-box__icon fas fa-hourglass-half"></i>
-                    <h3 class="heading-summary u-margin-bottom-small">saving your time</h3>
+                    <i class=" skill-box__icon fab fa-linkedin"></i>
+                    <h3 class="heading-summary u-margin-bottom-small">My Linkedin</h3>
                     <div class="skill-box__text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
                         doloribus corporis debitis soluta atque.
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="section-skills" id="section-skills">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                My Skills
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--1">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--1">
+                                Knowledge <br> C++ Python
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>Basic</li>
+                                <li>OOP</li>
+                                <li>Data analysis</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-1">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">
+                                    Two
+                                </p>
+                                <p class="card__price-value">
+                                    Years
+                                </p>
+                                <a href="#popup" class="button button--white">More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--2">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--2">
+                                create <br> landingpage
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>html5</li>
+                                <li>CSS SCSS</li>
+                                <li>Javascript</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-2">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">
+                                    Six
+                                </p>
+                                <p class="card__price-value">
+                                    months
+                                </p>
+                                <a href="#popup" class="button button--white">More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--3">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--3">
+                                create<br> website
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>NodeJs</li>
+                                <li>ReactJS</li>
+                                <li>SQL</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-3">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">
+                                    Three
+                                </p>
+                                <p class="card__price-value">
+                                    Months
+                                </p>
+                                <a href="#popup" class="button button--white">More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="u-center-text">
+            <a href="#" class="button button--blue">More information</a>
         </div>
     </section>
 
