--- a/index.html
+++ b/index.html
@@ -229,6 +229,64 @@
         </div>
     </section>
 
+    <section class="section-favorite">
+        <!-- <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+
+                <source src="img/Boulevard.mp4" type="video/mp4">
+
+                <source src="img/Boulevard.webm" type="video/webm">
+                Your browser is not supported
+            </video>
+        </div> -->
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                favorite
+            </h2>
+        </div>
+        <div class="row">
+            <div class="favorite">
+                <figure class="favorite__shape">
+                    <img src="/img/england.jpg" class="favorite__img" alt="photo1">
+                    <figcaption class="favorite__caption">
+                        England
+                    </figcaption>
+                </figure>
+                <div class="favorite__text">
+                    <h3 class="heading-summary u-margin-bottom-small">
+                        England
+                    </h3>
+                    <p>
+                        Anh là một quốc gia thuộc Vương quốc Liên hiệp Anh và Bắc Ireland. 
+                        Quốc gia này có biên giới trên bộ với Scotland về phía bắc và với Wales về phía tây. 
+                        Biển Ireland nằm về phía tây bắc và biển Celtic nằm về phía tây nam của Anh
+                    </p>
+                </div>
+            </div>
+            <div class="favorite">
+                <figure class="favorite__shape">
+                    <img src="/img/america.jpg" class="favorite__img" alt="photo2">
+                    <figcaption class="favorite__caption">
+                        America
+                    </figcaption>
+                </figure>
+                <div class="favorite__text">
+                    <h3 class="heading-summary u-margin-bottom-small">
+                        America
+                    </h3>
+                    <p>
+                        Hoa Kỳ hay Mỹ, tên đầy đủ là Hợp chúng quốc Hoa Kỳ, là một quốc gia cộng hòa lập hiến liên bang thuộc châu Mỹ.
+                        Quốc gia này nằm tại Tây Bán cầu, lãnh thổ bao gồm 50 tiểu bang và 1 đặc khu liên bang,
+                        thủ đô là Washington, D.C., thành phố lớn nhất là New York.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="u-center-text u-margin-top-big u-margin-bottom-big">
+            <a href="#" class="button-text">More information &rarr;</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
