--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <span class="heading-primary--main">LandingPage Advanced</span>
                 <span class="heading-primary--sub">Design by Van Le</span>
             </h3>
-            <a href="#" class="button button--white button--animated">More information</a>
+            <a href="https://github.com/vanlegithub/LandingPageAdvanced" target="_blank"
+                class="button button--white button--animated">More information</a>
         </div>
     </header>
 
@@ -44,19 +45,19 @@
                 <p class="paragraph">
                     Summary: I am a 4th year student at HCMUS-VNU majoring in Computer Networking.
                     I have a passion and interest in Web development (front-end),
-                    the goal of creating valuable products.
+                    <br>the goal of creating valuable products.
                     <br>Career objective: Looking forward to working in a young, energetic and active environment.
                     Become a Senior front-end developer in the next 2 years.
-                    Turn into a fullstack developer within 5 years later.
+                    <br>Turn into a fullstack developer within 5 years later.
                 </p>
                 <h3 class="heading-summary u-margin-bottom-small">
                     My hobbies
                 </h3>
                 <p class="paragraph">
-                    Sherlock Holmes, BIGBANG, Lionel Messi
-                    <br>League of Legends, PES, travel
+                    Sherlock Holmes, BIGBANG, Lionel Messi, IU
+                    <br>League of Legends, PES, travel, G-Dragon
                 </p>
-                <a href="#" class="button-text">More information &rarr;</a>
+                <a href="#socials" class="button-text">More information &rarr;</a>
             </div>
             <div class="col-1-of-2">
                 <div class="composition">
@@ -68,15 +69,15 @@
         </div>
     </div>
 
-    <section class="section-socials">
+    <section ID="socials" class="section-socials">
         <div class="row">
             <div class="col-1-of-4">
                 <div class="skill-box">
                     <i class=" skill-box__icon fab fa-facebook-square"></i>
                     <h3 class="heading-summary u-margin-bottom-small">My Facebook</h3>
                     <div class="skill-box__text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
-                        doloribus corporis debitis soluta atque.
+                        Facebook, Inc. là một công ty truyền thông xã hội và công nghệ Mỹ có trụ sở tại Menlo Park,
+                        California
                     </div>
                 </div>
             </div>
@@ -85,8 +86,8 @@
                     <i class=" skill-box__icon fab fa-instagram-square"></i>
                     <h3 class="heading-summary u-margin-bottom-small">My Instagram</h3>
                     <div class="skill-box__text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
-                        doloribus corporis debitis soluta atque.
+                        Instagram là một dịch vụ mạng xã hội chia sẻ hình ảnh và video của Mỹ được tạo ra bởi Kevin
+                        Systrom và Mike Krieger.
                     </div>
                 </div>
             </div>
@@ -95,8 +96,8 @@
                     <i class=" skill-box__icon fab fa-github-square"></i>
                     <h3 class="heading-summary u-margin-bottom-small">My Github</h3>
                     <div class="skill-box__text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
-                        doloribus corporis debitis soluta atque.
+                        GitHub là một dịch vụ cung cấp kho lưu trữ mã nguồn Git dựa trên nền web cho các dự án phát
+                        triển phần mềm.
                     </div>
                 </div>
             </div>
@@ -105,8 +106,7 @@
                     <i class=" skill-box__icon fab fa-linkedin"></i>
                     <h3 class="heading-summary u-margin-bottom-small">My Linkedin</h3>
                     <div class="skill-box__text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit, Neque, quas
-                        doloribus corporis debitis soluta atque.
+                        LinkedIn là một trang mạng định hướng kinh doanh, có trụ sở tại Mountain View, bang California.
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                         </div>
                         <h4 class="card__heading">
                             <span class="card__heading-span card__heading-span--2">
-                                create <br> landingpage
+                                make <br> landingpage
                             </span>
                         </h4>
                         <div class="card__details">
@@ -201,9 +201,9 @@
                         </h4>
                         <div class="card__details">
                             <ul>
-                                <li>NodeJs</li>
-                                <li>ReactJS</li>
                                 <li>SQL</li>
+                                <li>ReactJS</li>
+                                <li>NodeJs</li>
                             </ul>
                         </div>
                     </div>
@@ -225,20 +225,11 @@
             </div>
         </div>
         <div class="u-center-text">
-            <a href="#" class="button button--blue">More information</a>
+            <a href="#" class="button button--dark">More information</a>
         </div>
     </section>
 
     <section class="section-favorite">
-        <!-- <div class="bg-video">
-            <video class="bg-video__content" autoplay muted loop>
-
-                <source src="img/Boulevard.mp4" type="video/mp4">
-
-                <source src="img/Boulevard.webm" type="video/webm">
-                Your browser is not supported
-            </video>
-        </div> -->
         <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
                 favorite
@@ -257,8 +248,8 @@
                         England
                     </h3>
                     <p>
-                        Anh là một quốc gia thuộc Vương quốc Liên hiệp Anh và Bắc Ireland. 
-                        Quốc gia này có biên giới trên bộ với Scotland về phía bắc và với Wales về phía tây. 
+                        Anh là một quốc gia thuộc Vương quốc Liên hiệp Anh và Bắc Ireland.
+                        Quốc gia này có biên giới trên bộ với Scotland về phía bắc và với Wales về phía tây.
                         Biển Ireland nằm về phía tây bắc và biển Celtic nằm về phía tây nam của Anh
                     </p>
                 </div>
@@ -275,7 +266,8 @@
                         America
                     </h3>
                     <p>
-                        Hoa Kỳ hay Mỹ, tên đầy đủ là Hợp chúng quốc Hoa Kỳ, là một quốc gia cộng hòa lập hiến liên bang thuộc châu Mỹ.
+                        Hoa Kỳ hay Mỹ, tên đầy đủ là Hợp chúng quốc Hoa Kỳ, là một quốc gia cộng hòa lập hiến liên bang
+                        thuộc châu Mỹ.
                         Quốc gia này nằm tại Tây Bán cầu, lãnh thổ bao gồm 50 tiểu bang và 1 đặc khu liên bang,
                         thủ đô là Washington, D.C., thành phố lớn nhất là New York.
                     </p>
@@ -283,10 +275,55 @@
             </div>
         </div>
         <div class="u-center-text u-margin-top-big u-margin-bottom-big">
-            <a href="#" class="button-text">More information &rarr;</a>
+            <a href="https://en.wikipedia.org/wiki/England" target="_blank" class="button-text">More information
+                &rarr;</a>
         </div>
     </section>
 
+    <section class="section-contact">
+        <div class="row">
+            <div class="contact">
+                <div class="contact__form">
+                    <form class="form">
+                        <div>
+                            <h2 class="heading-secondary">
+                                contact now
+                            </h2>
+                        </div>
+                        <div class="form__group">
+                            <input id="name" type="text" class="form__input" placeholder="Enter your name" required>
+                            <label for="name" class="form__label">Name</label>
+                        </div>
+                        <div class="form__group">
+                            <input id="email" type="email" class="form__input" placeholder="Enter your email" required>
+                            <label for="email" class="form__label">Email</label>
+                        </div>
+                        <div class="form__group">
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="male" name="gender">
+                                <label for="male" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Male
+                                </label>
+                            </div>
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="female" name="gender">
+                                <label for="female" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Female
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form__group">
+                            <a href="#" class="button button--dark">
+                                Send &rarr;
+                            </a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
