--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 </head>
 
 <body>
-    
+
     <header id="home" class="header">
         <div class="header__logo-box">
             <img class="header__logo" src="/img/logo.png" alt="logo">
         </div>
         <div class="header__text-box">
             <h3 class="heading-primary">
-                <span class="heading-primary--main">LandingPage Advanced</span>
-                <span class="heading-primary--sub">Design by Van Le</span>
+                <span class="heading-primary--main">Landing Page<br>Advanced</span>
+                <span class="heading-primary--sub">Design by VanLe</span>
             </h3>
             <a href="https://github.com/vanlegithub/LandingPageAdvanced" target="_blank"
                 class="button button--white button--animated">More information</a>
@@ -46,11 +46,11 @@
                     </h3>
                     <p class="paragraph">
                         Summary: I am a 4th year student at HCMUS-VNU majoring in Computer Networking.
-                        I have a passion and interest in Web development (front-end),
-                        <br>the goal of creating valuable products.
-                        <br>Career objective: Looking forward to working in a young, energetic and active environment.
-                        Become a Senior front-end developer in the next 2 years.
-                        <br>Turn into a fullstack developer within 5 years later.
+                        I have a passion and interest in Web development front-end. 
+                        <br>The goal of creating valuable products.
+                        <br>Career objective: Looking forward to working in a young environment.
+                        Become a Senior front-end developer in the next 2 years.Turn into 
+                        <br>a fullstack developer within 5 years later.
                     </p>
                     <h3 class="heading-summary u-margin-bottom-small">
                         My hobbies
@@ -59,7 +59,7 @@
                         Sherlock Holmes, BIGBANG, Lionel Messi, IU
                         <br>League of Legends, PES, travel, G-Dragon
                     </p>
-                    <a href="#popup" class="button-text">More information &rarr;</a>
+                    <a href="#popup" class="button-text button-about">More information &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
@@ -139,7 +139,7 @@
                             </div>
                             <h4 class="card__heading">
                                 <span class="card__heading-span card__heading-span--1">
-                                    Knowledge <br> C++ Python
+                                    Use <br> C++/Python
                                 </span>
                             </h4>
                             <div class="card__details">
@@ -178,9 +178,9 @@
                             </h4>
                             <div class="card__details">
                                 <ul>
-                                    <li>html5</li>
-                                    <li>CSS SCSS</li>
-                                    <li>Javascript</li>
+                                    <li>HTML5</li>
+                                    <li>CSS3 SASS</li>
+                                    <li>JavaScript</li>
                                 </ul>
                             </div>
                         </div>
@@ -286,8 +286,9 @@
                     </div>
                 </div>
             </div>
-            <div class="u-center-text u-margin-top-big u-margin-bottom-big">
-                <a href="https://en.wikipedia.org/wiki/Main_Page" target="_blank" class="button-text">More information
+            <div class="u-center-text button-favorite">
+                <a href="https://en.wikipedia.org/wiki/Main_Page" target="_blank" 
+                class="button-text">More information
                     &rarr;</a>
             </div>
         </section>
@@ -342,7 +343,6 @@
     <footer class="footer">
         <div class="footer__logo-box">
             <picture>
-                <source media="(max-width: 600px)" srcset="/img/logo.png 1x" sizes="">
                 <img srcset="/img/logo.png 1x" class="footer__logo">
             </picture>
             <h3 class="heading-secondary footer__title">
@@ -370,7 +370,7 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Copyright &copy; by VanLe. FIT-HCMUS Ho Chi Minh City 01-07-2021
+                    Copyright &copy; by VanLe. FIT-HCMUS Ho Chi Minh City July-2021
                 </p>
             </div>
         </div>
