--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     </h3>
                     <p class="paragraph">
                         Summary: I am a 4th year student at HCMUS-VNU majoring in Computer Networking.
-                        I have a passion and interest in Web development front-end. 
+                        I have a passion and interest in Web development front-end.
                         <br>The goal of creating valuable products.
                         <br>Career objective: Looking forward to working in a young environment.
-                        Become a Senior front-end developer in the next 2 years.Turn into 
+                        Become a Senior front-end developer in the next 2 years.Turn into
                         <br>a fullstack developer within 5 years later.
                     </p>
                     <h3 class="heading-summary u-margin-bottom-small">
@@ -287,8 +287,7 @@
                 </div>
             </div>
             <div class="u-center-text button-favorite">
-                <a href="https://en.wikipedia.org/wiki/Main_Page" target="_blank" 
-                class="button-text">More information
+                <a href="https://en.wikipedia.org/wiki/Main_Page" target="_blank" class="button-text">More information
                     &rarr;</a>
             </div>
         </section>
@@ -370,7 +369,7 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Copyright &copy; by VanLe. FIT-HCMUS Ho Chi Minh City July-2021
+                    Copyright &copy; by VanLe. FIT-HCMUS Ho Chi Minh City
                 </p>
             </div>
         </div>
@@ -412,7 +411,9 @@
             </ul>
         </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
