--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
     <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
-                <img src="img/box1.jpg" alt="box1popup" class="popup__img">
+                <img src="img/box1.jpg" alt="Tour photo" class="popup__img">
             </div>
             <div class="popup__right">
-                <a href="#home" class="popup__close">&times;</a>
+                <a href="#section-skills" class="popup__close">&times;</a>
                 <h2 class="heading-secondary u-margin-bottom-small">Information</h2>
                 <h3 class="heading-summary u-margin-bottom-small">Intruduction</h3>
                 <p class="popup__text">
@@ -391,7 +391,7 @@
                     sed fugiat quas. At vel dolorem, officia, rerum tenetur aspernatur, itaque maiores laudantium
                     voluptas
                 </p>
-                <a href="#home" class="button button--dark">Contact now</a>
+                <a href="#" class="button button--dark">Contact now</a>
             </div>
         </div>
     </div>
@@ -411,9 +411,7 @@
             </ul>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="/js/script.js"></script>
+    
 </body>
 
 </html>
