--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+    <div id="toast"></div>
     <section id="home" class="section-home">
         <div class="nav">
             <ul class="nav-list">
@@ -38,12 +38,12 @@
             </ul>
             <ul class="nav-list">
                 <li>
-                    <a href="#">
+                    <a onclick="showErrorToast();" href="#">
                         <i class="search-fast fas fa-search"></i>
                     </a>
                 </li>
-                <li><a href="#">SIGN IN</a></li>
-                <li><a href="#">SIGN OUT</a></li>
+                <li><a onclick="showErrorToast();" href="#">SIGN IN</a></li>
+                <li><a onclick="showErrorToast();" href="#">SIGN OUT</a></li>
             </ul>
         </div>
         <header class="header">
@@ -52,15 +52,14 @@
                     <span class="heading-primary--main">Landing Page<br>Advanced</span>
                     <span class="heading-primary--sub">Design by VanLe</span>
                 </h3>
-                <a href="https://github.com/vanlegithub/LandingPageAdvanced" target="_blank"
-                    class="button button--white">More information
+                <a href="https://github.com/vanlegithub/LandingPageAdvanced" target="_blank" class="btn btn--infor">More
+                    information
                 </a>
             </div>
         </header>
     </section>
 
     <main>
-
         <section id="about" class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
@@ -87,7 +86,14 @@
                         Sherlock Holmes, BIGBANG, Lionel Messi, IU
                         <br>League of Legends, PES, travel, G-Dragon
                     </p>
-                    <a href="#popup" class="button-text button-about">More information &rarr;</a>
+                    <div>
+                        <div onclick="showThanksToast();" class="btn btn--success btn--size-s">Like <i
+                                class="far fa-thumbs-up"></i>
+                        </div>
+                        <div onclick="showSorryToast();" class="btn btn--deny btn--size-s">Dislike <i
+                                class="far fa-thumbs-down"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="content-right">
                     <img src="img/minipic1.jpg" alt="photo1" class="content-right__photo content-right__photo--p1">
@@ -181,7 +187,7 @@
                                 <p class="feature__price-value">
                                     Years
                                 </p>
-                                <a href="#popup" class="button button--white">More</a>
+                                <a href="#popup" class="btn btn--infor">More</a>
                             </div>
                         </div>
                     </div>
@@ -213,7 +219,7 @@
                                 <p class="feature__price-value">
                                     Months
                                 </p>
-                                <a href="#popup" class="button button--white">More</a>
+                                <a href="#popup" class="btn btn--infor">More</a>
                             </div>
                         </div>
                     </div>
@@ -245,89 +251,55 @@
                                 <p class="feature__price-value">
                                     Months
                                 </p>
-                                <a href="#popup" class="button button--white">More</a>
+                                <a href="#popup" class="btn btn--infor">More</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section id="layout" class="section-layout">
-            <div class="layout-ctn">
-                <div class="column-item sidebar-one">
-                    <h2>Sidebar one</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                        neque est beatae? Nobis.
-                    </p>
-                </div>
-                <div class="column-item main-column">
-                    <h2>Main column</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
-                        ipsum dolor sit amet.
-                    </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                    cupiditate
-                    eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                    neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
-                        ipsum dolor sit amet consectetur.
-                    </p>
-                </div>
-                <div class="column-item sidebar-two">
-                    <h2>Sidebar two</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                        neque est beatae? Nobis.Nobis.Lorem ipsum dolor sit amet consectetur adipisicing.
-                    </p>
-                </div>
+            <div class="u-center-text btn-center">
+                <div onclick="showThanksToast();" class="btn btn--success btn--size-s">Like <i
+                        class="far fa-thumbs-up"></i></div>
+                <div onclick="showSorryToast();" class="btn btn--deny btn--size-s">Dislike <i
+                        class="far fa-thumbs-down"></i></div>
             </div>
         </section>
 
-        <section id="chart" class="section-chart">
-            <div class="chart-ctn">
-                <div class="chart-layout">
-                    <div class="chart-layout__item" style="--percent: 10%">10%</div>
-                    <div class="chart-layout__item" style="--percent: 20%">20%</div>
-                    <div class="chart-layout__item" style="--percent: 40%">40%</div>
-                    <div class="chart-layout__item" style="--percent: 90%">90%</div>
-                    <div class="chart-layout__item" style="--percent: 80%">80%</div>
-                    <div class="chart-layout__item" style="--percent: 40%">40%</div>
-                </div>
-            </div>
-        </section>
-
-        <section id="end" class="section-end">
-            <div class="end-ctn">
-                <div class="the-end__first">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+        <section id="content" class="section-content">
+            <div id="layout" class="layout">
+                <div class="layout-ctn">
+                    <div class="column-item sidebar-one">
+                        <h2>Sidebar one</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                            cupiditate
+                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
+                            soluta
+                            neque est beatae? Nobis.
+                        </p>
+                    </div>
+                    <div class="column-item main-column">
+                        <h2>Main column</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                            cupiditate
+                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
+                            soluta
+                            neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
+                            ipsum dolor sit amet.
+                        </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
                         cupiditate
                         eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
                         neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Lorem ipsum dolor sit amet.
-                    </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                    cupiditate
-                    eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                    neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                        cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Lorem ipsum dolor sit amet consectetur.
-                    </p>
-                </div>
-                <div class="the-end__second">
-                    <div class="the-end__second-one">
+                        </p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                            cupiditate
+                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
+                            soluta
+                            neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
+                            ipsum dolor sit amet consectetur.
+                        </p>
+                    </div>
+                    <div class="column-item sidebar-two">
+                        <h2>Sidebar two</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
                             cupiditate
                             eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
@@ -335,13 +307,63 @@
                             neque est beatae? Nobis.Nobis.Lorem ipsum dolor sit amet consectetur adipisicing.
                         </p>
                     </div>
-                    <div class="the-end__second-two">
+                </div>
+            </div>
+
+            <div id="chart" class="chart">
+                <div class="chart-ctn">
+                    <div class="chart-layout">
+                        <div class="chart-layout__item" style="--percent: 10%">10%</div>
+                        <div class="chart-layout__item" style="--percent: 20%">20%</div>
+                        <div class="chart-layout__item" style="--percent: 40%">40%</div>
+                        <div class="chart-layout__item" style="--percent: 90%">90%</div>
+                        <div class="chart-layout__item" style="--percent: 80%">80%</div>
+                        <div class="chart-layout__item" style="--percent: 40%">40%</div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="end" class="end">
+                <div class="end-ctn">
+                    <div class="the-end__first">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
                             cupiditate
                             eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
                             soluta
-                            neque est beatae? Nobis.
+                            neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet.
+                        </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                        cupiditate
+                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
+                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                            cupiditate
+                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
+                            soluta
+                            neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet consectetur.
+                        </p>
+                    </div>
+                    <div class="the-end__second">
+                        <div class="the-end__second-one">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                                cupiditate
+                                eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis
+                                minima
+                                soluta
+                                neque est beatae? Nobis.Nobis.Lorem ipsum dolor sit amet consectetur adipisicing.
+                            </p>
+                        </div>
+                        <div class="the-end__second-two">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                                cupiditate
+                                eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis
+                                minima
+                                soluta
+                                neque est beatae? Nobis.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
