--- a/index.html
+++ b/index.html
@@ -411,13 +411,13 @@
 
                 <div class="form-group">
                     <label for="email" class="form-label">Email</label>
-                    <input id="email" name="email" type="text" placeholder="VD: email@domain.com" class="form-control">
+                    <input id="enter-email" name="email" type="text" placeholder="VD: email@domain.com" class="form-control">
                     <span class="form-message"></span>
                 </div>
 
                 <div class="form-group">
                     <label for="password" class="form-label">Password</label>
-                    <input id="password" name="password" type="password" placeholder="Enter password"
+                    <input id="enter-password" name="password" type="password" placeholder="Enter password"
                         class="form-control">
                     <span class="form-message"></span>
                 </div>
@@ -457,7 +457,7 @@
             </p>
         </div>
     </footer>
-
+    
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
